dark mode fixed

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -48,6 +48,7 @@
                     bottom: 50%;
                     margin-left: 10px;
                     background-color: var(--primary);
+                    max-width: 200px;
                     width: 100%;
                     height: 2px;
                     padding: 0 10px;
@@ -141,6 +142,7 @@ textarea {
     max-width: 700px;
     width: 100%;
     height: 36px;
+    color: var(--foreground);
 
 
 }
